@startuml

class EngineLayer {
    +Scene scene
    +RenderingSystem renderingSystem
    +IPhysicsSolver physicsSolver

    +override void OnInit()
    +override void OnUpdate(float deltaTime)
    +override void OnEvent(Event& event)
    +override void OnRender()
}

class SceneLoader {
    + static void SaveScene(Scene &scene)
    + static std::unique_ptr<Scene> SceneLoader::LoadScene(const std::string &filepath)
}

EngineLayer --> SceneLoader

class AudioLayer {
    +void OnInit()
    +void OnUpdate(float deltaTime)
}

AudioLayer --|> AppLayer

class PhysicsSolver {
   +void SolvePhysics(Scene& scene, float deltaTime)
}

IPropagator --* PhysicsSolver

interface IPropagator {
    +void PropagateObject(SceneObject object)
}

class RenderingSystem {
    +void SetActiveCamera(Camera& camera)
}

RenderingSystem --* EngineLayer
RenderingSystem <-- CircleRenderer
RenderingSystem <-- SpriteRenderer

VerletPropagator ..|> IPropagator
Euler ..|> IPropagator
RungeKutta ..|> IPropagator

class Scene {
  + std::vector<SceneObject*> GetAllObjects()
  + void AddObject(std::unique_ptr<SceneObject> object)
  -std::vector<unique_ptr<SceneObject>> objects
  -Camera camera
}

class Camera {
+Transform transform
+float zoom
}

Camera --* Scene


Scene --* EngineLayer
SceneObject "many" --* "1" Scene
IRenderer --> SceneObject
ICollider "many" --* "1" SceneObject
EngineLayer --|> AppLayer
PhysicsSolver --* EngineLayer

class SettingsUI {
    void Render();
}

interface IUserInterface {
    +void Render();
}

struct Transform {
    vec2 position
    float rotation
    vec2 scale
}

Transform --* SceneObject
Transform --* Camera

SettingsUI ..|> IUserInterface
IUserInterface "many" --* "1" UILayer


class SceneObject {
    +uint id

    +Transform transform

    +float mass
    +vec2 velocity
    +float angularVelocity

    +IRenderer renderer
    +ICollider[] colliders

    +applyForce(vec2 force, vec2 localPosition)
}

class AppLayer {
    +AppLayer()
    +void SetWindow(std::shared_ptr<Window> window)
    +virtual void OnInit() = 0;
    +virtual void OnUpdate(float deltaTime) = 0;
    +virtual void OnEvent(Event& event) = 0;
    +virtual void OnRender() = 0;
}

class CircleCollider {
    +float radius
}

class CircleRenderer {
    +float radius
    +Color color
}
class SpriteRenderer {
    +string texturePath
    +float size
}
interface IRenderer {
    +void Render(Object& object)
}
interface ICollider {
    +bool CheckCollision(const ICollider& obj1, const ICollider& obj2)
}
CircleCollider ..|> ICollider
CircleRenderer ..|> IRenderer
SpriteRenderer ..|> IRenderer

class UILayer {
    +void OnInit()
    +void OnUpdate(float deltaTime)
    +void OnEvent(Event& event)
    +void OnRender()
}

UILayer --|> AppLayer

class Application {
    +std::vector<std::unique_ptr<AppLayer>> m_LayerStack;

    static Application& Get();

    +void Run()
    +void PushLayer(std::shared_ptr<AppLayer> layer)
    +void RaiseEvent(Event& event)
    +std::shared_ptr<Window> GetWindow()
}

AppLayer "many" --* "1" Application

Event <-- Application

KeyEvent --|> Event

class Event {
+EventType type
+bool handled
}

@enduml